# kdp-formatter

./: .gitignore  README.md  pyproject.toml  requirements.txt
kdp_formatter/: __init__.py  __main__.py
kdp_formatter/cli/: __init__.py  main.py
kdp_formatter/gui/: __init__.py  app.py
kdp_formatter/processors/: __init__.py  image_processor.py  pdf_processor.py  text_processor.py
